--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,11 +38,11 @@ steps:
     command: 'restore'
     projects: '**/*.csproj'
 
-- template: /c/Users/surya/devops/mslearn-tailspin-spacegame-web/templates/build.yml
+- template: templates/build.yml
   parameters:
     buildConfiguration: 'Debug' 
 
-- template: /c/Users/surya/devops/mslearn-tailspin-spacegame-web/templates/build.yml
+- template: templates/build.yml
   parameters:
     buildConfiguration: 'Release' 
 
